# smoke

./: .mcp.json  .smoke.toml  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  llms.txt  uninstall.ps1  uninstall.sh
.claude/: settings.json
docs/: ARCHITECTURE.md  BENCHMARKING.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TERMINAL-AIS.md  TESTING.md
hooks/: pre-tool-use.sh
src/: main.rs
src/config/: mod.rs
src/hook/: mod.rs
src/install/: mod.rs
src/mcp/: mod.rs
src/parser/: mod.rs
src/post_hook/: mod.rs
src/sandbox/: js.rs  mod.rs  python.rs  rust.rs
src/state/: mod.rs
